--- a/web/index.html
+++ b/web/index.html
@@ -1,10 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>web</title>
+    <title>JTube</title>
+    <meta
+      name="description"
+      content="Youtube, but all of Jeffery Epstein's videos."
+    />
+    <meta
+      name="keywords"
+      content="Jeffery Epstein, Youtube, videos, Jeffery Epstein's videos"
+    />
   </head>
   <body>
     <div id="root"></div>
